refactor: assignment-service api routes to use problem response format
