# services/assignment-service/internal/controller/assignmentController.go
@@ -1,10 +1,8 @@
 package controller
 
 import (
-	"assignment-service/internal/model/utility"
+	"assignment-service/internal/problems"
 	"assignment-service/internal/service"
-
-	"fmt"
 	"net/http"
 
 	"github.com/go-chi/chi/v5"
@@ -25,25 +23,13 @@ func (a *AssignmentController) GetExperimentsAndVariantsForBucket(w http.Respons
 
 	userId := chi.URLParam(r, "user_id")
 	if userId == "" {
-		status := http.StatusBadRequest
-		problemDetail := utility.ProblemDetail{
-			Title:  "Bad Request",
-			Status: status,
-			Detail: "user_id path parameter is required",
-		}
-		WriteResponse(w, status, problemDetail)
+		problems.NewBadRequestError("user_id path parameter is required").Write(w)
 		return
 	}
 
 	assignments, err := a.assignmentService.GetAssignmentsForUserId(ctx, userId)
 	if err != nil {
-		status := http.StatusInternalServerError
-		problemDetail := utility.ProblemDetail{
-			Title:  "Internal Server Error",
-			Status: status,
-			Detail: fmt.Sprintf("Failed to get assignments for user_id %s: %v", userId, err),
-		}
-		WriteResponse(w, status, problemDetail)
+		problems.NewInternalServerError().Write(w)
 		return
 	}
 
